<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">IntelliFit</string>
    <string name="camera_fragment_label">Capture</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_capture">START CAPTURE</string>
    <string name="stop_capture">STOP CAPTURE</string>
    <string name="discard">Discard</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="delete">Delete</string>
    <string name="pe_request_permission">This app needs camera permission.</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Don\'t have an account? CREATE</string>
    <string name="brand">Train with precision</string>
    <string name="confirm_password">Confirm password</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="create_account">Create account</string>
    <string name="tranings">Trainings</string>
    <string name="privacy_policies">Privacy policies</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="sign_off">Sign off</string>
    <string name="exercises">%s exercises</string>
    <string name="retry">Retry</string>
    <string name="start">Start</string>
    <string name="reps">Reps</string>
    <string name="training">Training</string>
    <string name="preview">Preview</string>
    <string name="next_exercise">Next exercise</string>
    <string name="description">Information</string>

</resources>